--- a/.eslintrc
+++ b/.eslintrc
@@ -15,7 +15,7 @@
     "rules": {
       "@typescript-eslint/no-unused-vars": "error",
       // to enforce using type for object type definitions, can be type or interface
-      "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+      "@typescript-eslint/consistent-type-definitions": ["error"],
       "@typescript-eslint/no-explicit-any": "off",
       "@typescript-eslint/ban-ts-comment": "off"
     },
